--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,12 @@
 
 body {
     font-family: 'Roboto', sans-serif;
+    width: 100%;
+    height: 100vh;
+    background-image: url(https://img.freepik.com/free-vector/spring-floral-watercolor-background-vector-green-with-leaf-illustration_53876-126350.jpg?w=996&t=st=1688472712~exp=1688473312~hmac=8bce8891495c9fc6603cd3b80eeb765b218afdcc908b4e95dc6790835cf65204);
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-top: 2.5rem;
 }
 
 .done {
@@ -19,4 +25,30 @@ body {
 
 li {
     cursor: pointer;
+    padding: .3125rem 0;
+    margin-bottom: .3125rem;
+    display: flex;
+    justify-content: space-between;
+    background-color: #D8EFC5;
+    border-radius: .625rem;
+    padding: .125rem .9375rem .125rem 2.5rem;
+}
+
+ul {
+    padding-inline-start: 0;
+}
+
+.my-container {
+    width: 40%;
+    margin: 0 auto;
+    padding: .625rem;
+    border-radius: .9375rem;
+    background-color: #57B26C;
+    max-height: 31.25rem;
+    overflow-y: auto;
+}
+
+
+input {
+    padding: 0;
 }
